--- a/style.css
+++ b/style.css
@@ -29,12 +29,8 @@ body {
     font-size: 25px;
     padding-left: 40px;
     padding-right: 40px;
+    font-family: 'Bree Serif';
 }
-.image {
-    background-color: white;
-    height: 300px;
-    width: 600px;
-    margin-left: 40px;
 }
 #3dbox {
     height: 500px;
