--- a/style.css
+++ b/style.css
@@ -70,6 +70,17 @@ body {
     margin-top: 10px;
 }
 
+.boxes {
+    background-color: #D1FFBD;
+    border-width: 5px;
+    border-style: solid;
+    border-color: limegreen;
+    border-radius: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 60px;
+    padding-top: 30px;
+
 @media (max-width: 992px) {
     .contexthead {
         text-align: center;
