--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
     background-color: lightblue;
+    margin-bottom: 100px;
 }
 
 .head {
@@ -31,14 +32,16 @@ body {
     text-align: center;
     font-size: 40px;
     padding-top: 175px;
+    z-index: 1;
 }
 .animation {
     text-align: center;
     font-size: 130px;
+    z-index: 1;
 }
 .contexthead {
     text-align: center;
-    font-size: 50px;
+    font-size: 30px;
 }
 .context {
     font-size: 20px;
@@ -49,10 +52,11 @@ body {
 
 .navbar {
     position: fixed;
+    z-index: 2;
 }
 
 .space {
-    height: 100px;
+    height: 80px;
 }
 
 .space2 {
@@ -85,10 +89,19 @@ body {
 #fontsize {
     font-size: 20px;
 }
-@media (max-width: 992px) {
+
+.otherback {
+    background-color: yellow;
+    padding: 10px;
+}
+.img{
+    max-width: 80%;
+    height: auto;
+}
+@media (min-width: 992px) {
     .contexthead {
         text-align: center;
-        font-size: 20px;
+        font-size: 50px;
     }
     .context {
         font-size: 20px;
