--- a/style.css
+++ b/style.css
@@ -86,6 +86,13 @@ body {
     padding-bottom: 60px;
     padding-top: 30px;
 
+.backgroundtwo {
+    background-color: blue;
+    height: 50px;
+    margin: 50px;
+    padding: 50px;
+
+}
 #fontsize {
     font-size: 20px;
 }
